Move real fixes out to separate PRs; suppress findings with TODO links
Per review feedback, behavior-changing fixes are split into their own PRs
so this PR only carries the mechanical Error Prone 2.50.0 compliance work:

- Reference-equality bug fixes (ZkMaintenanceUtils, HttpShardHandler,
  ZkShardTermsTest) moved to https://github.com/apache/solr/pull/4605
- Charset API modernization (JdkObsolete findings) moved to
  https://github.com/apache/solr/pull/4606

The affected sites revert to the code on main, with @SuppressWarnings and
a TODO comment pointing at the PR that carries the real fix; the
suppressions are dropped when those PRs merge and this branch rebases.